# test_marketplace

./: .env.template  README.md  alembic.ini  pyproject.toml
src/app/: create_fastapi_app.py  main.py
src/app/alembic/: env.py
src/app/alembic/versions/: 2024_09_16_1224-f353d2171c35_.py  2024_09_17_1414-df886315e795_.py
src/app/api/: __init__.py
src/app/api/api_v1/: __init__.py  parcels.py
src/app/core/: config.py  db_helper.py
src/app/crud/: parcels.py
src/app/models/: base.py  parcels.py  user.py
src/app/schemas/: parcels.py
src/tests/: conftest.py  test_api.py
