[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = {extras = ["email-validators"], version = "^2.9.1"}
pydantic-settings = "^2.5.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
alembic = "^1.13.1"
orjson = "^3.10.7"
fastapi = "^0.114.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.4"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"